# netowork-server

./: .gitignore  Cargo.toml  biome.json  drizzle.config.ts  dump.rdb  eslint.config.mjs  go.mod  go.sum  jest.config.js  kysely.config.ts  nest-cli.json  package-lock.json  package.json  test.http  tsconfig.json  vite.config.ts
cmd/netowork/: main.go
internal/app/: app.go
internal/config/: config.go
internal/constants/: cookie.go
internal/custom_validators/: decimal.go
internal/dto/: auth.go  task.go  user.go  verificationToken.go
internal/middlewares/: auth.go  middleware.go
internal/models/: passwordResetToken.go  task.go  user.go  verificationToken.go
internal/redis/: redis.go
internal/router/: router.go
internal/sender/: sender.go
internal/service/: services.go
internal/storage/: passwordResetTokenRepository.go  storage.go  transactionRepository.go  userRepository.go  verificationTokenRepository.go
internal/types/: session.go  token.go
migrations/: 0000_aromatic_jack_power.sql  20241013091655_create_users_table.sql  20241013103835_add_index_on_users_email.sql  20241015110459_create_users_table.sql  20241015110534_create_verification_tokens_table.sql  20241016141432_create_password_verification_token_table.sql  20241030110038_create_users_table.sql  20241030110355_password_reset_tokens_table.sql  20241030110519_verification_token_table.sql  20241031092136_add_is_verified_column_in_users_table.sql  20241108112431_add_task_table.sql  20250314123628_create-users-table.ts  20250326035143_create-works-and-work_images.ts  20250426041537_create-category.ts  20250426045228_create-task.ts  20250518024831_create-task-views.ts  20250602020606_create-task-replies.ts  20250630070337_create-chat-table.ts
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
pkg/req/: decode.go  handleBody.go  isValid.go  req.go
pkg/res/: res.go
pkg/token/: token.go
prisma/: schema.prisma
public/: reset-password.html  verify-email.html
requests/auth/: login.http  register.http  verifyAccount.http
scripts/: deleteTestDatabases.sh
src/: app.module.ts  app.rs  app.ts  config.ts  configuration.rs  email_client.rs  env.validation.ts  error.rs  helpers.rs  index.ts  jwt_client.rs  lib.rs  main.rs  main.ts  redis_client.rs  request.d.ts  smtp_client.rs  startup.rs  swagger.ts  telemetry.rs
src/clients/: emailClients.ts
src/common/: error.ts  handlerWrapper.ts  router.ts
src/config/: cache.ts  config.ts  configuration.ts  database.ts  mailer.ts
src/configs/: db.config.ts  email.config.ts
src/const/: chat.ts  cloudinary.ts  cookie.ts  multer.ts  redis.ts  task.ts  validator.ts  works.ts
src/constants/: redis.ts
src/contracts/: base.ts
src/controllers/: healthCheck.ts  index.ts
src/database/: database.module.ts  db.sql
src/db/: mod.rs  password_token_repo.rs  token_repo.rs  transaction_repo.rs  user_repo.rs  user_repository.rs
src/domain/: error.rs  mod.rs
src/drizzle/: drizzle.module.ts
src/handlers/: auth.handler.ts  base.handler.ts  category.handler.ts  chat.handler.ts  task.handler.ts  users.handler.ts  works.handler.ts
src/helpers/: jwt.rs  mod.rs  password_hash.rs  response.rs  validator.rs
src/iam/: iam.module.ts
src/middlewares/: auth.rs  auth.ts  authentication.ts  authorization.ts  errorHandler.ts  middlewares.ts  middlewars.ts  validateRequest.ts
src/models/: mod.rs  password_token.rs  token.rs  user.rs
src/redis/: redis.module.ts  redis.service.ts
src/router/: router.ts
src/routers/: auth.rs  health_check.rs  mod.rs
src/routes/: auth.route.ts  auth.rs  authRouter.ts  index.ts  mod.rs  portfolioRouter.ts  userRouter.ts
src/schemas/: config.ts
src/services/: auth.service.ts  category.service.ts  chat.service.ts  email.service.ts  error.rs  fileUploader.service.ts  imageUploader.service.ts  index.ts  services.ts  task.service.ts  users.service.ts  works.service.ts
tests/: health_check.rs  setupDb.ts  test-app.ts  testApp.ts  tsconfig.json  utils.ts
(+291 files in other folders)
