[package]
name = "netowork-server"
version = "0.1.0"
edition = "2021"


[lib]
path = "./src/lib.rs"

[[bin]]
name = "netowork"
path = "./src/main.rs"

[dependencies]
axum = "0.7.7"
config = "0.14.0"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
tracing = {version = "0.1.40", features = ["log"]}
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.20.1"
validator = "0.18.1"
secrecy = {version = "0.10.2", features = ["serde"]}
serde-aux = "4.5.0"
claim = "0.5.0"
unicode-segmentation = "1.12.0"
derive_more = {version = "1.0.0", features = ["from"]}
tower = {version = "0.5.1", features = ["limit", "buffer"]}
tower-http = {version = "0.6.1", features = ["trace", "cors", "compression-full", "timeout",]}


[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
reqwest = "0.12.8"
fake = "2.10.0"
